Salesforce/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>END_DATE_CORRECT__c</fullName>
        <label>END DATE CORRECT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MONTH_NUMBER_OPP__c</fullName>
        <label>MONTH NUMBER OPP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPP_VINAY__c</fullName>
        <label>OPP VINAY</label>
        <type>Date</type>
    </fields>
</CustomObject>